# Axiomurgy

./: .gitignore  AGENTS.md  AXIOMURGY_SPEC.md  CURSOR_PROMPTS.md  NEXT_LAP_SPEC.md  README.md  RELAY_NOTES.md  axiomurgy.py  package.json  pyproject.toml  pytest.ini  requirements-vermyth-integration.txt  requirements.txt  spell.schema.json
.cursor/: environment.json
adapters/: demo_mcp_server.py  mock_issue_api.openapi.yaml  mock_issue_server.py
axiomurgy/: __init__.py  __main__.py  cli.py  combinatorics.py  core.py  correspondence.py  describe.py  dialectic.py  execution.py  fingerprint.py  friction.py  generation.py  governor.py  habitus.py  legacy.py  lullian.py  ouroboros.py  planning.py  proof.py  reasoning_bundle.py  review.py  runes.py  scene.py  telos.py  util.py  vermyth_export.py  vermyth_integration.py
corpus/: reasoning_eval_corpus.json
docs/: AXIOMURGY_VERMYTH_SEMANTIC_SEAM.md  CLI_CONTRACTS.md  CONTRACT_FILES.md  PRIMER_MANIFEST.md  REASONING_EVAL_HARNESS.md  REASONING_SURFACES.md  SEMANTIC_BASELINE_MAINTAINER_RUNBOOK.md  SEMANTIC_RECOMMEND_ACCEPTANCE.md  SEMANTIC_RECOMM_VERMYTH_PIN.md  VERMYTH_GATE.md  WYRD_STORAGE.md
examples/: inbox_triage.spell.json  openapi_ticket_then_fail.spell.json  ouroboros_score_fixture.spell.json  ouroboros_score_fixture_v12.spell.json  primer_to_axioms.spell.json  primer_via_mcp.spell.json  research_brief.spell.json
policies/: default.policy.json
primers/: primer1.txt  primer2.txt  primer3.txt  primer4.txt  primer5.txt  primer6.txt  primer7.txt  primer_01.txt  primer_02.txt  primer_03.txt  primer_04.txt  (+3 more)
(+70 files in other folders)
